k8s/backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: colours-of-safety
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      imagePullSecrets:
        - name: ghcr-pull-secret
      containers:
        - name: backend
          image: ghcr.io/merilairon/colours-of-safety-backend:latest
          ports:
            - containerPort: 3000
          readinessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 5
            failureThreshold: 6
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: colours-of-safety
spec:
  selector:
    app: backend
  ports:
    - port: 3000
      targetPort: 3000
