k8s/cloudflare-tunnel-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: colours-of-safety-ingress
  namespace: colours-of-safety
  annotations:
    cloudflare-tunnel-ingress-controller.strrl.dev/backend-protocol: "http"
spec:
  ingressClassName: cloudflare-tunnel
  rules:
    - host: coloursofsafety.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
